add portfolio projects

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sahil Akbari - Frontend Web Developer who creates amazing digital experiences!"
+      content="Sahil - Website Development Expert | Full Stack Web Developer who creates amazing digital experiences!"
     />
     <link
       rel="stylesheet"
