--- a/public/index.html
+++ b/public/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/projectImages/logo.svg" />
+    <link rel="favicon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Sahil - Website Development Expert | Full Stack Web Developer who creates amazing digital experiences!"
+      content="Sahil - Website Development Expert | Frontend Web Developer who creates amazing digital experiences!"
     />
     <link
       rel="stylesheet"
@@ -23,7 +23,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <title>Sahil Akbari - Software Engineer</title>
+    <title>Sahil Akbari - Frontend Developer</title>
   </head>
   <body>
     <div id="root"></div>
